force-app/main/default/objects/QuoteLine_Mass_Update__c/QuoteLine_Mass_Update__c.object-meta.xml
<CustomObject>
    <label>QuoteLine Mass Update</label>
    <nameField>
        <displayFormat>MU-{00000}</displayFormat>
        <label>QuoteLine Mass Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuoteLine Mass Update</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>