force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/Batch_Job_Details__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Details__c</fullName>
    <label>Batch Job Details</label>
    <type>TextArea</type>
</CustomField>