force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <label>Batch Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>