force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/DimB__c.field-meta.xml
<CustomField>
    <fullName>DimB__c</fullName>
    <label>DimB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>