force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/DimD__c.field-meta.xml
<CustomField>
    <fullName>DimD__c</fullName>
    <label>DimD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>