force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/DimE__c.field-meta.xml
<CustomField>
    <fullName>DimE__c</fullName>
    <label>DimE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>