force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/DimF__c.field-meta.xml
<CustomField>
    <fullName>DimF__c</fullName>
    <label>DimF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>