force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/Drawing_ID__c.field-meta.xml
<CustomField>
    <fullName>Drawing_ID__c</fullName>
    <label>Drawing ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>