force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>QuoteLine Mass Update</relationshipLabel>
    <relationshipName>QuoteLine_Mass_Update</relationshipName>
    <type>Lookup</type>
</CustomField>