force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/QuoteLine_Description__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine_Description__c</fullName>
    <label>QuoteLine Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>