force-app/main/default/objects/QuoteLine_Mass_Update__c/fields/Trigger_QL_Update__c.field-meta.xml
<CustomField>
    <fullName>Trigger_QL_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger QL Update</label>
    <type>Checkbox</type>
</CustomField>